# datathons-2

./: 00.dados-ANA.ipynb  00.dados-INMET.ipynb  00.dados-satelite.ipynb  00.dadosINMET.ipynb  01.remocao-repetidos.ipynb  02.EDA-viz.ipynb  03.preenchimento.ipynb  03.rem-out.ipynb  04.representatividade.ipynb  06.execucao.ipynb  07.dash.py  Copy_of_Caltech_Hackathon_Submission_(Increasing_Network_Robustness_Project).ipynb  README.md  conda-install.bash  dadosANA.ipynb  dadosINMET.ipynb  pyproject.toml  remocao-repetidos.ipynb  requirements.bash  requirements.txt  requirements.yaml  visualizacao.py  visualizar-postos.ipynb
arquivos/: postos_plu_ana_smap.csv  postos_plu_inmet_smap.csv
arquivos/merge-e-posto/: 2549017.csv  2549061.csv  2549093.csv  2550069.csv  2551008.csv  2551015.csv  2551054.csv  2551063.csv  2551069.csv  2552009.csv  2552030.csv  2552055.csv  2552061.csv  2552070.csv  2553052.csv  2553062.csv  2649016.csv  2649073.csv  2650027.csv  2651054.csv  2651055.csv  2651056.csv  2651057.csv  2651058.csv  2651059.csv  A1.csv  A10.csv  A2.csv  A3.csv  A4.csv  A5.csv  A6.csv  A7.csv  A8.csv  A807.csv  A823.csv  A843.csv  A862.csv  A864.csv  A874.csv  (+3 more)
arquivos/series-chuva-ana/: Barra Bonita-Promissão.csv  Barra Bonita.csv  Capivara.csv  Foz do Areia.csv  Furnas.csv  Iguaçu.csv  Iguaçú.csv  Itaipu.csv  Itá.csv  (+25 more)
contornos/: contornos_smap.dbf  contornos_smap.shp  contornos_smap.shx  iguacu.dbf  iguacu.shp  iguacu.shx
hidromet/: ANA.py  INMET.py  __init__.py  config.py  contornos.py  grade.py  limpeza.py  merge.py  modelos.py  utils.py  visualizacao.py
(+114 files in other folders)
