[tool.poetry]
name = "hidromet"
version = "0.1.0"
description = "Obtenção e tratamento de dados hidrometeorológicos."
authors = ["andradelis <andradelis@id.uff.br>"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[[tool.mypy.overrides]]
module = [
    "pandas",
]
ignore_missing_imports = true


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
requests = "^2.26.0"
Shapely = "^1.7.1"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
mypy = "^0.910"
pydocstyle = "^6.1.1"
flake9 = "^3.8.3"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["poetry", "tests"]
filter_files = true
known_first_party = "poetry"

[tool.flake8]
max-line-length = 88
max-complexity = 10
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache"
]

ignore = [  # alertas e erros por conta do black
    "E501", # linha longa
    "E203", # espaço antes de ':'
    "E225", # sem espaço ao redor de operadores 
    "W503", # quebra de linha antes de um operador binário
    "W504"  # quebra de linha após um operador binário line
]

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D401"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"